[project]
name = "drakeuni-bench"
version = "0.1.0"
description = "Raw pydrake-loop versus DrakeUni batch benchmark"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "N806", "N801", "N802", "N803"]
